// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tablink renders 1`] = `
<a
  className="sc-kvczt gHrCOn"
/>
`;

exports[`Tablink renders Href 1`] = `
<a
  className="sc-kvczt gHrCOn"
  href="www.google.com"
/>
`;

exports[`Tablink renders count 1`] = `
<a
  className="sc-kvczt gHrCOn"
>
  <span
    className="sc-kwilob dRCGNC"
  >
    2
  </span>
</a>
`;

exports[`Tablink renders element left 1`] = `
<a
  className="sc-kvczt gHrCOn"
>
  <div
    className="sc-iFHmoU kBZPdx"
  >
    <span>
      Element
    </span>
  </div>
</a>
`;

exports[`Tablink renders isTop 1`] = `
<a
  className="sc-kvczt iGJuEE"
/>
`;

exports[`Tablink renders size 1`] = `
<a
  className="sc-kvczt gXsloI"
  size="small"
/>
`;
